--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.27.1",
     "slick-carousel": "^1.8.1",
     "styled-reset": "^4.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
