--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-image-gallery": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.27.1",
